--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/konva": "^9.7.5",
     "konva": "^9.3.16",
     "next": "15.1.0",
     "react": "^19.0.0",
