--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.1",
+    "react-konva-utils": "^1.0.7",
     "use-image": "^1.1.1"
   },
   "devDependencies": {
